k8s/calendar.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calendar-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calendar
  template:
    metadata:
      labels:
        app: calendar
    spec:
      containers:
        - name: calendar
          image: northamerica-northeast2-docker.pkg.dev/centered-motif-492523-u3/lab5-repo/calendar:latest
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: calendar-service
  annotations:
    cloud.google.com/backend-config: '{"ports": {"8081": "calendar-backendconfig"}}'
spec:
  selector:
    app: calendar
  ports:
    - port: 8081
      targetPort: 8081
