k8s/weather.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather
  template:
    metadata:
      labels:
        app: weather
    spec:
      containers:
        - name: weather
          image: northamerica-northeast2-docker.pkg.dev/centered-motif-492523-u3/lab5-repo/weather:latest
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: weather-service
  annotations:
    cloud.google.com/backend-config: '{"ports": {"8082": "weather-backendconfig"}}'
spec:
  selector:
    app: weather
  ports:
    - port: 8082
      targetPort: 8082
