k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lab5-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: fe-service
      port:
        number: 8080
  rules:
    - http:
        paths:
          - path: /home
            pathType: Prefix
            backend:
              service:
                name: fe-service
                port:
                  number: 8080
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: fe-service
                port:
                  number: 8080
          - path: /calendar/login
            pathType: Prefix
            backend:
              service:
                name: calendar-service
                port:
                  number: 8081
          - path: /calendar
            pathType: Prefix
            backend:
              service:
                name: calendar-service
                port:
                  number: 8081
          - path: /weather/login
            pathType: Prefix
            backend:
              service:
                name: weather-service
                port:
                  number: 8082
          - path: /weather
            pathType: Prefix
            backend:
              service:
                name: weather-service
                port:
                  number: 8082
